--- a/apps/dependency-injection/config/routes.yaml
+++ b/apps/dependency-injection/config/routes.yaml
@@ -1,3 +1,11 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+bad_first:
+  path: /bad/first
+  defaults: {_controller: 'App\Controller\Bad\FirstController:indexAction' }
+
+bad_second:
+  path: /bad/second/{a}/{b}
+  defaults: {_controller: 'App\Controller\Bad\SecondController:indexAction', a: 2, b: 2 }
