--- a/apps/cms-features/.env.dist
+++ b/apps/cms-features/.env.dist
@@ -8,3 +8,16 @@ APP_SECRET=d6aae14b911bdd4b1a750746de9b75e7
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=sqlite:///%kernel.project_dir%/var/data.db
+###< doctrine/doctrine-bundle ###
+
+###>symfony-cmf###
+PHPCR_WORKSPACE=default
+PHPCR_USER=admin
+PHPCR_PASSWORD=admin
+###< symfony-cmf ###
