--- a/apps/cms-features/composer.json
+++ b/apps/cms-features/composer.json
@@ -4,14 +4,32 @@
     "require": {
         "php": "^7.0.8",
         "ext-iconv": "*",
+        "doctrine/data-fixtures": "^1.3",
+        "doctrine/doctrine-bundle": "^1.8",
+        "doctrine/doctrine-cache-bundle": "^1.3",
+        "doctrine/phpcr-bundle": "^2.0",
+        "doctrine/phpcr-odm": "^2.0",
+        "jackalope/jackalope-doctrine-dbal": "^1.3",
+        "lunetics/locale-bundle": "^2.6",
+        "symfony-cmf/content-bundle": "^2.0",
+        "symfony-cmf/core-bundle": "^2.0",
+        "symfony-cmf/routing-bundle": "^2.0",
+        "symfony-cmf/seo-bundle": "^2.0",
+        "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.4",
         "symfony/lts": "^3",
+        "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "^3.4",
+        "symfony/templating": "^3.4",
+        "symfony/twig-bundle": "^3.4",
+        "symfony/validator": "^3.4",
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
-        "symfony/dotenv": "^3.4"
+        "symfony/dotenv": "^3.4",
+        "symfony/web-server-bundle": "^3.4"
     },
     "config": {
         "preferred-install": {
@@ -54,5 +72,7 @@
             "id": "01C7TA14KPXBQ0T3G0D7A5H7TE",
             "allow-contrib": false
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
